feat: performance page

--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -355,8 +355,7 @@
 	"chaosOdds.skillOdds": "Вероятности навыков",
 	"chaosOdds.performance.title": "Скорость расчёта вероятностей",
 	"chaosOdds.performance.pageTitle": "Скорость расчёта",
-	"chaosOdds.performance.description": "Цель: выполнение каждого теста за время менее 4 секунд.\nКртиреии оценки: \n< 1 сек - отлично;\n< 2 сек - хорошо;\n< 4 сек - удовлетворительно;\n> 4 сек - плохо.\nАвтоматический запуск отключается, если хотя бы один тест работал более 10 сек",
-	"chaosOdds.performance.autoRun": "Автозапуск",
+	"chaosOdds.performance.description": "Цель: выполнение каждого теста за время менее 4 секунд.\nКртиреии оценки: \n< 1 сек - отлично;\n< 2 сек - хорошо;\n< 4 сек - удовлетворительно;\n> 4 сек - плохо.",
 	"chaosOdds.performance.clearTests": "Очистить результаты",
 
 	"Defeated": "Поражение",
