feat: primary button type

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -468,5 +468,7 @@
 	"Chaos Bag": "Chaos Bag",
 	"Difficulty picker": "Difficulty picker",
 	"Chaos Odds": "Chaos Odds",
-	"Scenario Reference": "Scenario Reference"
+	"Scenario Reference": "Scenario Reference",
+	"Multiplayer": "Multiplayer",
+	"Single player": "Single player"
 }
