--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -493,5 +493,7 @@
 	"Chaos bag": "Мешок хаоса",
 	"Difficulty picker": "Сложность проверки",
 	"Chaos Odds": "Вероятности мешка хаоса",
-	"Scenario Reference": "Памятка сценария"
+	"Scenario Reference": "Памятка сценария",
+	"Multiplayer": "Мультиплеер",
+	"Single player": "Один игрок"
 }
