--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -27,6 +27,7 @@
 	"about.hallOfFame.hauke": "some AI-uncropped investigator images",
 	"about.hallOfFame.felice": "investigator card scans",
 	"about.hallOfFame.sarnetsky": "Application logo and icons",
+	"about.hallOfFame.kolorono": "Consultations on chaos odds",
 
 	"Eugene Sarnetsky": "Eugene Sarnetsky",
 
