--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -27,6 +27,7 @@
 	"about.hallOfFame.hauke": "AI-увеличенные изображения сыщиков",
 	"about.hallOfFame.felice": "Сканы карт сыщиков",
 	"about.hallOfFame.sarnetsky": "Логотип приложения и иконки",
+	"about.hallOfFame.kolorono": "Консультации по расчёту вероятностей",
 
 	"Eugene Sarnetsky": "Евгений Сарнецкий",
 
