--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -1,4 +1,16 @@
 {
+	"network.no-connection": "No connection to the network",
+	"network.type": "Network",
+	"network.type.none": "No connection",
+	"network.type.wifi": "Wi-Fi",
+	"network.type.cellular": "Cellular",
+	"network.type.ethernet": "Ethernet",
+	"network.type.bluetooth": "Bluetooth",
+	"network.type.wimax": "WiMAX",
+	"network.type.vpn": "VPN",
+	"network.type.other": "Other",
+	"network.username": "Your username",
+
 	"error.downloadFailed": "Failed to download content. Please, try again later or change network connection. Details: {{error}}",
 	"app.disclaimer": "Arkham Horror: The Card Game™ and all related content © Fantasy Flight Games (FFG). This app is not produced, endorsed by or affiliated with FFG.",
 	"modal.theme.title": "Install Theme",
@@ -336,6 +348,7 @@
 	"update.failed": "The application update failed: {{error}}",
 
 	"clipboard.successCopy": "Text copied to clipboard",
+	"clipboard.errorCopy": "Failed to copy text to clipboard",
 	"chaosBag.enabled": "Enabled",
 	"chaosOdds.enabled": "Enabled",
 	"chaosOdds.skillOdds": "Skill odds",
