feat: deeplink routing

--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -12,7 +12,7 @@
 	"multiplayer.connect": "Подключиться",
 	"multiplayer.joinGame": "Присоединиться к игре",
 	"multiplayer.searching": "Поиск игр",
-	"multiplayer.hint": "Все игроки должны быть в одной сети. Создайте игру или присоединитесь к игре, используя:\n - код подключения;\n - QR-код;\n - автоматическое сканирование сети.",
+	"multiplayer.hint": "Все игроки должны быть в одной сети. Создайте игру или присоединитесь к игре, используя:\n - код подключения;\n - QR-код;\n - переход по ссылке\n - автоматическое сканирование сети.",
 	"multiplayer.error.invalidInviteCode": "Неверный код подключения",
 	"multiplayer.error.selfInviteCode": "Невозможно присоединиться к собственной игре",
 
