--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -364,7 +364,7 @@
 	"multiplayer.connect": "Connect",
 	"multiplayer.joinGame": "Join a game",
 	"multiplayer.searching": "Searching for games",
-	"multiplayer.hint": "All players must be in the same network. Create a game or join a game using:\n - connection code;\n - QR code;\n - automatic network scanning.",
+	"multiplayer.hint": "All players must be in the same network. Create a game or join a game using:\n - connection code;\n - QR code;\n - link\n - automatic network scanning.",
 	"multiplayer.error.selfInviteCode": "You cannot join your own game as a host",
 	"multiplayer.error.invalidInviteCode": "Invalid connection code",
 
