feat: base networking

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -47,6 +47,11 @@
 
 	"board.help.pins.longPress": "Long press on a calculation on the board screen to reveal chaos token for this calculation",
 	"board.help.pins.toggle": "By default, if you have pinned calculations, you can press on its block on the board page to show/hide it. Also you can find Advanced mode of this feature on a Settings page",
+	"Advanced": "Advanced",
+	"Swipe gestures": "Swipe gestures",
+	"Phase end": "Phase end",
+	"Picker Size": "Picker size",
+	"Code": "Code",
 
 	"board.help.calculator.history.actions": "Swipe left on a calculation to see an additional menu",
 	"board.help.calculator.history.remove": "Remove a calculation",
@@ -299,12 +304,12 @@
 	"ability.wendy.parallel.elderSign.selected.text": "Tap to remove",
 	"ability.wendy.parallel.elderSign.confirm.title": "Reveal",
 
-	"ability.fatherMateo.parallel.fastFail": "No available [bless] tokens to seal",
-	"ability.fatherMateo.parallel.sealBless": "{{name}} seals [bless] on {{targetName}}",
-	"ability.fatherMateo.parallel.sealBless.self": "{{name}} seals [bless] on himself",
+	"ability.mateo.parallel.fastFail": "No available [bless] tokens to seal",
+	"ability.mateo.parallel.sealBless": "{{name}} seals [bless] on {{targetName}}",
+	"ability.mateo.parallel.sealBless.self": "{{name}} seals [bless] on himself",
 
-	"ability.fatherMateo.parallel.reaction.text": "Draw sealed [bless] from the chaos bag instead of a random token?",
-	"ability.fatherMateo.parallel.reaction.title": "Draw sealed [bless]",
+	"ability.mateo.parallel.reaction.text": "Draw sealed [bless] from the chaos bag instead of a random token?",
+	"ability.mateo.parallel.reaction.title": "Draw sealed [bless]",
 
 	"ability.lucia.elderSign.title": "Heal damage/horror",
 
@@ -445,9 +450,13 @@
 	"Negative health/sanity": "Negative health/sanity",
 	"Unlimited chaos tokens": "Unlimited chaos tokens",
 	"Custom Content": "Custom Content",
+	"Content Type": "Content Type",
+	"Translated content": "Translated content",
 	"Upkeep resources": "Upkeep resources",
 
 	"Ravenous Tracker": "Ravenous Tracker",
+	"Bounty Contracts": "Bounty Contracts",
+	"Family Inheritance": "Family Inheritance",
 	"Cards beneath George": "Cards beneath George",
 	"Cards beneath Diana": "Cards beneath Diana",
 	"Cards beneath Gloria": "Cards beneath Gloria",
@@ -461,10 +470,13 @@
 	"Modify tokens": "Modify tokens",
 	"Fill": "Fill",
 	"Fill Chaos Bag": "Fill Chaos bag",
+	"Chaos bag": "Chaos bag",
 	"Get action": "Get action",
+	"Give an action": "Give an action",
 	"-2 [bless] and -2 [curse]": "-2 [bless] and -2 [curse]",
 	"Hall of Fame": "Hall of Fame",
 	"Lead Tester": "Lead Tester",
+	"ArkhamDB crew": "ArkhamDB crew",
 	"Credits": "Credits",
 	"Card icons": "Card icons",
 	"ArkhamCards icons": "ArkhamCards icons",
@@ -474,13 +486,15 @@
 	"Special Thanks": "Special Thanks",
 	"Application Info": "Application Info",
 	"Device Info": "Device Info",
+	"Build Version": "Build Version",
 	"Translation": "Translation",
+	"Remove artworks url": "Remove artworks URL",
 	"Sponsors": "Sponsors",
 	"Korean": "Korean",
 	"Chinese": "Chinese",
 	"Initial values": "Initial values",
 	"Negative values": "Negative values",
-	"Hand size": "Hand size",
+	"Hand Size": "Hand Size",
 	"Restart App": "Restart App",
 	"Reload downloaded assets": "Reload downloaded assets",
 	"Clear download queue": "Clear download queue",
