feat: keep alive

--- a/assets/i18n/name/ru.json
+++ b/assets/i18n/name/ru.json
@@ -60,7 +60,15 @@
 		"Побежденный",
 		"Пораженный",
 		"Сумеречный",
-		"Оскверненный"
+		"Оскверненный",
+		"Осторожный",
+		"Дерзкий",
+		"Исключительный",
+		"Храбрый",
+		"Хладнокровный",
+		"Безупречный",
+		"Убедительный",
+		"Редкий"
 	],
 	"noun": [
 		"Следователь",
@@ -75,7 +83,7 @@
 		"Ми-го",
 		"Приспешник",
 		"Йитианин",
-		"Дхол",
+		"Враг",
 		"Хранитель",
 		"Искатель",
 		"Ловкач",
@@ -109,6 +117,9 @@
 		"Добряк",
 		"Ужас",
 		"Боец",
-		"Хозяин"
+		"Хозяин",
+		"Мираж",
+		"Бомонд",
+		"Комбатант"
 	]
 }
