--- a/assets/i18n/core/ko.json
+++ b/assets/i18n/core/ko.json
@@ -134,7 +134,7 @@
 
 	"Show calculation changes": "변경사항 계산 보기",
 
-	"Skill modfiers": "능력 수정치",
+	"Skill modifiers": "능력 수정치",
 
 	"Give action": "행동 주기",
 	"Not selected": "선택하지 않음",
