--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -389,7 +389,7 @@
 
 	"Swipe gestures": "Свайпы",
 
-	"Skill modfiers": "Модификаторы навыков",
+	"Skill modifiers": "Модификаторы навыков",
 
 	"Initial values": "Исходные значения",
 
