--- a/assets/i18n/core/zh-cn.json
+++ b/assets/i18n/core/zh-cn.json
@@ -248,7 +248,7 @@
 
 	"Show calculation changes": "显示计算历史",
 
-	"Skill modfiers": "技能修正",
+	"Skill modifiers": "技能修正",
 
 	"Give action": "给予行动",
 	"Not selected": "未选择",
