--- a/assets/i18n/core/zh.json
+++ b/assets/i18n/core/zh.json
@@ -248,7 +248,7 @@
 
 	"Show calculation changes": "顯示計算曆史",
 
-	"Skill modfiers": "技能修正",
+	"Skill modifiers": "技能修正",
 
 	"Give action": "給予行動",
 	"Not selected": "未選擇",
