fix: reset chaos bag on start

--- a/assets/i18n/name/en.json
+++ b/assets/i18n/name/en.json
@@ -1,5 +1,5 @@
 {
-	"adjective": [
+	"prefix": [
 		"Eldritch",
 		"Unspeakable",
 		"Squamous",
@@ -28,7 +28,7 @@
 		"Corrupted",
 		"Forgotten"
 	],
-	"noun": [
+	"postfix": [
 		"Investigator",
 		"Cultist",
 		"Deep One",
