--- a/assets/i18n/name/ru.json
+++ b/assets/i18n/name/ru.json
@@ -1,5 +1,5 @@
 {
-	"adjective": [
+	"prefix": [
 		"Потусторонний",
 		"Невыразимый",
 		"Циклопический",
@@ -70,7 +70,7 @@
 		"Убедительный",
 		"Редкий"
 	],
-	"noun": [
+	"postfix": [
 		"Следователь",
 		"Сыщик",
 		"Культист",
