feat: core 26 joe ability

--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -319,6 +319,8 @@
 
 	"ability.kate.darkMatter.fluxStabilizer.charge": "{{name}} кладёт 1 заряд на Потоковый стабилизатор",
 
+	"ability.joe.core2026.elderSign": "{{name}} берёт 1 карту и получает 1 ресурс",
+	"ability.joe.core2026.reaction": "{{name}} берёт 1 карту",
 	"resources.notEnough": "Недостаточно ресурсов. Необходимо&nbsp;{{count}}, доступно&nbsp;{{available}}",
 
 	"heal.damage": "Вылечить {{value}}/{{total}} [health]",
