feat: ally slots

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -472,5 +472,6 @@
 	"Chaos Bag": "Chaos Bag",
 	"Difficulty picker": "Difficulty picker",
 	"Chaos Odds": "Chaos Odds",
-	"Scenario Reference": "Scenario Reference"
+	"Scenario Reference": "Scenario Reference",
+	"Ally slots": "Ally slots"
 }
