--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -497,5 +497,6 @@
 	"Chaos bag": "Мешок хаоса",
 	"Difficulty picker": "Сложность проверки",
 	"Chaos Odds": "Вероятности мешка хаоса",
-	"Scenario Reference": "Памятка сценария"
+	"Scenario Reference": "Памятка сценария",
+	"Ally slots": "Союзники"
 }
