feat: ru generations

--- a/assets/i18n/name/ru.json
+++ b/assets/i18n/name/ru.json
@@ -68,7 +68,35 @@
 		"Хладнокровный",
 		"Безупречный",
 		"Убедительный",
-		"Редкий"
+		"Редкий",
+		"Автоматический",
+		"Активный",
+		"Базовый",
+		"Бесплатный",
+		"Ближайший",
+		"Быстрый",
+		"Ведущий",
+		"Внеочередной",
+		"Закрытый",
+		"Кратчайший",
+		"Направленный",
+		"Напечатанный",
+		"Нейтральный",
+		"Обновлённый",
+		"Обязательный",
+		"Огромный",
+		"Отрицательный",
+		"Отсроченный",
+		"Победный",
+		"Постоянный",
+		"Продолжительный",
+		"Пустой",
+		"Развёрнутый",
+		"Многоразовый",
+		"Заменяющий",
+		"Атакующий",
+		"Атакованный",
+		"Уникальный"
 	],
 	"postfix": [
 		"Следователь",
@@ -120,6 +148,39 @@
 		"Хозяин",
 		"Мираж",
 		"Бомонд",
-		"Комбатант"
+		"Комбатант",
+		"Провал",
+		"Успех",
+		"Игрок",
+		"Актив",
+		"Бой",
+		"Выбор",
+		"Держатель",
+		"Движение",
+		"Жетон",
+		"Заряд",
+		"Запас",
+		"Иммунитет",
+		"Комплект",
+		"Контроль",
+		"Максимум",
+		"Модификатор",
+		"Мститель",
+		"Набор",
+		"Навык",
+		"Наплыв",
+		"Охотник",
+		"Патрон",
+		"Побег",
+		"Приоритет",
+		"Ресурс",
+		"Сброс",
+		"Слот",
+		"Тип",
+		"Уровень",
+		"Уход",
+		"Экземпляр",
+		"Эффект",
+		"Рассудок"
 	]
 }
